operations/keycloak-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-kc-service
spec:
  type: ClusterIP
  selector:
    app: postgresql-kc
  ports:
  - port: 5432
    targetPort: 5432
