operations/radar-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radar
  template:
    metadata:
      labels:
        app: radar
    spec:
      containers:
      - name: radar
        image: ghcr.io/pm4-fs25-techradar/skopos/skopos:1cdfa1f
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: radar-service
spec:
  selector:
    app: radar
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
