operations/radar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: radar
spec:
  rules:
  - host: skopos.pm4.init-lab.ch
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: radar-service
            port:
              number: 8080
  tls:
  - hosts:
    - skopos.pm4.init-lab.ch
    secretName: skopos.pm4.init-lab.ch
